fix: prevent horizontal scrolling through very dark ways

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
 body {
     margin: 0;
 }
+
+@media (max-width: 768px) {
+    body {
+        width: 98%;
+    }
+}
